# VRShell

./: .editorconfig  .gitattributes  .gitignore  .npmrc  README.md  package-lock.json  package.json  ui设计方案.md
.github/: dependabot.yml
docs/: app-refactor-plan.md  architecture.md  backend-refactor-suggestions.md  backlog.md  change-review-plan.md  contributor-checklist.md  dependency-security.md  design.md  engineering-improvements.md  jetbrains-layout-prototype.html  (+7 more)
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: dialog.json  events.json
src-tauri/src/: app.rs  app_error.rs  commands.rs  config.rs  connect.rs  error.rs  host_key.rs  interaction.rs  keyring.rs  main.rs  sanitize.rs  sessions.rs  sftp.rs  sftp_error.rs  sftp_path.rs  sftp_session.rs  sftp_task.rs  ssh.rs  state.rs
src-tauri/src/commands/: credential.rs  mod.rs  security.rs  session.rs  sftp.rs  task.rs  terminal.rs
src-tauri/src/domain/: credential.rs  mod.rs  session.rs  session_tree.rs  sftp.rs  ssh_config.rs  task.rs  terminal.rs
src-tauri/src/infrastructure/: app_paths.rs  event_bus.rs  file_store.rs  keyring_store.rs  known_hosts_store.rs  mod.rs  ssh_auth.rs  ssh_client.rs  ssh_config_store.rs  ssh_connection.rs
src-tauri/src/ipc/: contract.rs  dto.rs  events.rs  mod.rs
src-tauri/src/services/: credential_service.rs  mod.rs  session_service.rs  sftp_service.rs  task_service.rs  terminal_service.rs
src-tauri/src/services/sftp_service/: README.md  connection.rs  tasks.rs  transfer.rs
src-tauri/src/services/terminal_service/: README.md  events.rs
(+624 files in other folders)
